alignment fixed

--- a/src/components/GetStarted/GetStarted.scss
+++ b/src/components/GetStarted/GetStarted.scss
@@ -89,7 +89,10 @@ background: linear-gradient(180deg, #373632, #111132);
             padding: 50px;
             width: 100%;
           }
-
+p{
+  font-weight: bold;
+  margin-bottom: 10px;
+}
         form {
         display: flex;
         flex-direction: column;
@@ -145,7 +148,7 @@ background: linear-gradient(180deg, #373632, #111132);
 
       }
      @include mobile {
-  margin-top: 20px;
+  margin-top: 10px;
   padding: 8px 15px; // reduced from 10px 20px
 }
     }
